--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,4 @@ urls = { homepage = "https://github.com/tancop/librespot-python" }
 classifiers = ["Topic :: Multimedia :: Sound/Audio"]
 
 [tool.setuptools]
-packages = ["librespot"]
+packages.find = { where = ["librespot"] }
